--- a/ReHouse.FrontEnd/Web.config
+++ b/ReHouse.FrontEnd/Web.config
@@ -113,5 +113,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="Local" connectionString="Data Source=PC\SQLEXPRESS;Initial Catalog=ReHouse;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="smarterAsp" connectionString="Data Source=SQL5034.SmarterASP.NET;Initial Catalog=DB_A17292_rehouse;User Id=DB_A17292_rehouse_admin;Password=AimonlinE1;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
