--- a/ReHouse.Utils/ReHouse.Utils.csproj
+++ b/ReHouse.Utils/ReHouse.Utils.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ReHouse.Utils</RootNamespace>
     <AssemblyName>ReHouse.Utils</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -61,6 +62,7 @@
     <Compile Include="BusinessOperations\Auth\Roles\DeleteRolesOperation.cs" />
     <Compile Include="BusinessOperations\Auth\Roles\UpdateRoleOperation.cs" />
     <Compile Include="BusinessOperations\Auth\SetPasswordOperation.cs" />
+    <Compile Include="BusinessOperations\Cart\LoadCartOperation.cs" />
     <Compile Include="BusinessOperations\Flat\AddFlatOperation.cs" />
     <Compile Include="BusinessOperations\Flat\DeleteFlatOperation.cs" />
     <Compile Include="BusinessOperations\Filters\LoadFiltersOperation.cs" />
@@ -120,6 +122,8 @@
     <Compile Include="DataBase\Security\User.cs" />
     <Compile Include="Except\ActionNotAllowedException.cs" />
     <Compile Include="Except\ReHouseException.cs" />
+    <Compile Include="Helpers\CartAdvertModel.cs" />
+    <Compile Include="Helpers\CartModel.cs" />
     <Compile Include="Helpers\ParrentCategories.cs" />
     <Compile Include="Helpers\AdvertsType.cs" />
     <Compile Include="Helpers\GenerateHash.cs" />
