--- a/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
+++ b/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
@@ -221,6 +221,9 @@
     <Compile Include="App_Start\Startup.cs" />
     <Compile Include="Controllers\AuthorizeController.cs" />
     <Compile Include="Controllers\CartController.cs" />
+    <Compile Include="Controllers\FeedbackController.cs" />
+    <Compile Include="Controllers\MapController.cs" />
+    <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Controllers\RentController.cs" />
     <Compile Include="Controllers\SaleController.cs" />
     <Compile Include="Controllers\NewBuildingController.cs" />
@@ -296,6 +299,8 @@
     <Content Include="Content\images\flat2.jpg" />
     <Content Include="Content\images\flat3.jpg" />
     <Content Include="Content\images\flat3.png" />
+    <Content Include="Content\images\like.png" />
+    <Content Include="Content\images\like_hover.png" />
     <Content Include="Content\images\load.gif" />
     <Content Include="Content\images\logout.png" />
     <Content Include="Content\images\manager.jpg" />
@@ -311,6 +316,9 @@
     <Content Include="Content\images\rehousemin.jpg" />
     <Content Include="Content\images\select.png" />
     <Content Include="Content\images\select_hover.png" />
+    <Content Include="Content\images\www.jpg" />
+    <Content Include="Content\images\youtube.png" />
+    <Content Include="Content\images\youtube_hover.png" />
     <Content Include="Content\minslider.css" />
     <Content Include="Content\reset.css" />
     <Content Include="Content\style.css" />
@@ -419,6 +427,8 @@
     <Content Include="Views\Sale\Detail.cshtml" />
     <Content Include="Views\Sale\Flat.cshtml" />
     <Content Include="Views\Cart\Index.cshtml" />
+    <Content Include="Views\Feedback\Index.cshtml" />
+    <Content Include="Views\Map\Index.cshtml" />
     <None Include="Views\NewBuilding\Index.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Web.config">
@@ -463,6 +473,7 @@
     <Content Include="Views\Rent\Homestead.cshtml" />
     <Content Include="Views\Rent\House.cshtml" />
     <Content Include="Views\Shared\Cart\_listOfAdverts.cshtml" />
+    <Content Include="Views\News\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
