--- a/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
+++ b/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
@@ -219,9 +219,12 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.cs" />
+    <Compile Include="Areas\Cabinet\CabinetAreaRegistration.cs" />
+    <Compile Include="Controllers\EmailController.cs" />
     <Compile Include="Controllers\AuthorizeController.cs" />
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\FeedbackController.cs" />
+    <Compile Include="Controllers\ManagerController.cs" />
     <Compile Include="Controllers\MapController.cs" />
     <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Controllers\RentController.cs" />
@@ -252,7 +255,7 @@
     <Compile Include="Models\PageAndFilterModel.cs" />
     <Compile Include="Models\BuilderModel.cs" />
     <Compile Include="Models\ClientsDataModel.cs" />
-    <Compile Include="Models\FeedbackModel.cs" />
+    <Compile Include="Models\EmailModel.cs" />
     <Compile Include="Models\ForVkModel.cs" />
     <Compile Include="Models\HelperCatalog.cs" />
     <Compile Include="Models\JournalModel.cs" />
@@ -299,7 +302,10 @@
     <Content Include="Content\images\flat2.jpg" />
     <Content Include="Content\images\flat3.jpg" />
     <Content Include="Content\images\flat3.png" />
+    <Content Include="Content\images\girl1.png" />
+    <Content Include="Content\images\girl2.png" />
     <Content Include="Content\images\like.png" />
+    <Content Include="Content\images\liked.png" />
     <Content Include="Content\images\like_hover.png" />
     <Content Include="Content\images\load.gif" />
     <Content Include="Content\images\logout.png" />
@@ -365,6 +371,7 @@
     <Content Include="Content\images\tw.png" />
     <Content Include="Content\images\vk-g.png" />
     <Content Include="Content\images\vk.png" />
+    <Content Include="Scripts\detailsNews.js" />
     <Content Include="Scripts\advertSettingsRent.js" />
     <Content Include="Scripts\advertSettings.js" />
     <Content Include="Scripts\ajaxFunc.js" />
@@ -418,6 +425,7 @@
     <Content Include="Content\fonts\casper\casperitalic.ttf" />
     <Content Include="Content\fonts\casper\casperitalic.woff" />
     <Content Include="Content\fonts\casper\casperitalic.woff2" />
+    <Content Include="Areas\Cabinet\Views\web.config" />
     <None Include="Properties\PublishProfiles\wanted.pubxml" />
     <None Include="Scripts\_references.js" />
     <Content Include="Views\Shared\NewB\_listOfNewBuildings.cshtml" />
@@ -429,6 +437,9 @@
     <Content Include="Views\Cart\Index.cshtml" />
     <Content Include="Views\Feedback\Index.cshtml" />
     <Content Include="Views\Map\Index.cshtml" />
+    <Content Include="Views\Manager\Index.cshtml" />
+    <Content Include="Views\admin.cshtml" />
+    <Content Include="Views\Email\Index.cshtml" />
     <None Include="Views\NewBuilding\Index.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Web.config">
@@ -442,8 +453,6 @@
     </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Error\Index.cshtml" />
     <Content Include="Views\Error\InternalServerError.cshtml" />
@@ -474,9 +483,13 @@
     <Content Include="Views\Rent\House.cshtml" />
     <Content Include="Views\Shared\Cart\_listOfAdverts.cshtml" />
     <Content Include="Views\News\Index.cshtml" />
+    <Content Include="Views\Shared\Partial\_emailPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\Cabinet\Controllers\" />
+    <Folder Include="Areas\Cabinet\Models\" />
+    <Folder Include="Areas\Cabinet\Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
