--- a/ReHouse.FrontEnd/Web.config
+++ b/ReHouse.FrontEnd/Web.config
@@ -16,6 +16,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <globalization culture="ru-RU" uiCulture="ru" />
     <customErrors mode="Off"/>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
