--- a/ReHouse.FrontEnd/Web.config
+++ b/ReHouse.FrontEnd/Web.config
@@ -17,7 +17,7 @@
   </appSettings>
   <system.web>
     <globalization culture="ru-RU" uiCulture="ru" />
-    <customErrors mode="Off"/>
+    <customErrors mode="Off" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
@@ -114,6 +114,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="Local" connectionString="Data Source=PC\SQLEXPRESS;Initial Catalog=ReHouse;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="smarterAsp" connectionString="Data Source=SQL5034.SmarterASP.NET;Initial Catalog=DB_A17292_rehouse;User Id=DB_A17292_rehouse_admin;Password=AimonlinE1;" providerName="System.Data.SqlClient" />
+    <add name="smarterAsp" connectionString="Data Source=sql6001.smarterasp.net;Initial Catalog=DB_A1E43C_rehouse;User Id=DB_A1E43C_rehouse_admin;Password=rehouse123456;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
