--- a/ReHouse.Utils/ReHouse.Utils.csproj
+++ b/ReHouse.Utils/ReHouse.Utils.csproj
@@ -45,9 +45,14 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="ImageResizer, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ImageResizer.4.0.5\lib\net45\ImageResizer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -63,6 +68,7 @@
     <Compile Include="BusinessOperations\Auth\Roles\UpdateRoleOperation.cs" />
     <Compile Include="BusinessOperations\Auth\SetPasswordOperation.cs" />
     <Compile Include="BusinessOperations\Cart\LoadCartOperation.cs" />
+    <Compile Include="BusinessOperations\Categories\LoadCategoriesOperation.cs" />
     <Compile Include="BusinessOperations\Flat\AddFlatOperation.cs" />
     <Compile Include="BusinessOperations\Flat\DeleteFlatOperation.cs" />
     <Compile Include="BusinessOperations\Filters\LoadFiltersOperation.cs" />
@@ -93,6 +99,8 @@
     <Compile Include="BusinessOperations\News\UpdateArticleOperation.cs" />
     <Compile Include="BusinessOperations\Titles\AddTitleOperation.cs" />
     <Compile Include="BusinessOperations\Titles\DeleteTitleOperation.cs" />
+    <Compile Include="BusinessOperations\Titles\LoadTrimConditionsOperation.cs" />
+    <Compile Include="BusinessOperations\Titles\LoadMarketTypesOperation.cs" />
     <Compile Include="BusinessOperations\Titles\LoadTitlesOperation.cs" />
     <Compile Include="BusinessOperations\Titles\UpdateTitleOperation.cs" />
     <Compile Include="BusinessOperations\Users\AddUserOperation.cs" />
@@ -146,57 +154,21 @@
     <Compile Include="Migrations\201701141604511_Migrate2.Designer.cs">
       <DependentUpon>201701141604511_Migrate2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201701231727184_ver3.4.cs" />
-    <Compile Include="Migrations\201701231727184_ver3.4.Designer.cs">
-      <DependentUpon>201701231727184_ver3.4.cs</DependentUpon>
+    <Compile Include="Migrations\201704071800170_some.cs" />
+    <Compile Include="Migrations\201704071800170_some.Designer.cs">
+      <DependentUpon>201704071800170_some.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201701251923319_newbuildings.cs" />
-    <Compile Include="Migrations\201701251923319_newbuildings.Designer.cs">
-      <DependentUpon>201701251923319_newbuildings.cs</DependentUpon>
+    <Compile Include="Migrations\201704071817406_some2.cs" />
+    <Compile Include="Migrations\201704071817406_some2.Designer.cs">
+      <DependentUpon>201704071817406_some2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201701262001109_vers.cs" />
-    <Compile Include="Migrations\201701262001109_vers.Designer.cs">
-      <DependentUpon>201701262001109_vers.cs</DependentUpon>
+    <Compile Include="Migrations\201704071820113_some3.cs" />
+    <Compile Include="Migrations\201704071820113_some3.Designer.cs">
+      <DependentUpon>201704071820113_some3.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201702011805042_filters.cs" />
-    <Compile Include="Migrations\201702011805042_filters.Designer.cs">
-      <DependentUpon>201702011805042_filters.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201702011914357_filters2.cs" />
-    <Compile Include="Migrations\201702011914357_filters2.Designer.cs">
-      <DependentUpon>201702011914357_filters2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201702011947356_filters3.cs" />
-    <Compile Include="Migrations\201702011947356_filters3.Designer.cs">
-      <DependentUpon>201702011947356_filters3.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201702022000469_filters5.cs" />
-    <Compile Include="Migrations\201702022000469_filters5.Designer.cs">
-      <DependentUpon>201702022000469_filters5.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201702132112025_sale-controller.cs" />
-    <Compile Include="Migrations\201702132112025_sale-controller.Designer.cs">
-      <DependentUpon>201702132112025_sale-controller.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201702151759275_trim.cs" />
-    <Compile Include="Migrations\201702151759275_trim.Designer.cs">
-      <DependentUpon>201702151759275_trim.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201702191724132_advert_prop.cs" />
-    <Compile Include="Migrations\201702191724132_advert_prop.Designer.cs">
-      <DependentUpon>201702191724132_advert_prop.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201702191755161_advert_markettype.cs" />
-    <Compile Include="Migrations\201702191755161_advert_markettype.Designer.cs">
-      <DependentUpon>201702191755161_advert_markettype.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201702191758404_advert_markettype1.cs" />
-    <Compile Include="Migrations\201702191758404_advert_markettype1.Designer.cs">
-      <DependentUpon>201702191758404_advert_markettype1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201703161945191_feedback.cs" />
-    <Compile Include="Migrations\201703161945191_feedback.Designer.cs">
-      <DependentUpon>201703161945191_feedback.cs</DependentUpon>
+    <Compile Include="Migrations\201704071938429_some7.cs" />
+    <Compile Include="Migrations\201704071938429_some7.Designer.cs">
+      <DependentUpon>201704071938429_some7.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -217,44 +189,17 @@
     <EmbeddedResource Include="Migrations\201701141604511_Migrate2.resx">
       <DependentUpon>201701141604511_Migrate2.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201701231727184_ver3.4.resx">
-      <DependentUpon>201701231727184_ver3.4.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201704071800170_some.resx">
+      <DependentUpon>201704071800170_some.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201701251923319_newbuildings.resx">
-      <DependentUpon>201701251923319_newbuildings.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201704071817406_some2.resx">
+      <DependentUpon>201704071817406_some2.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201701262001109_vers.resx">
-      <DependentUpon>201701262001109_vers.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201704071820113_some3.resx">
+      <DependentUpon>201704071820113_some3.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201702011805042_filters.resx">
-      <DependentUpon>201702011805042_filters.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201702011914357_filters2.resx">
-      <DependentUpon>201702011914357_filters2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201702011947356_filters3.resx">
-      <DependentUpon>201702011947356_filters3.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201702022000469_filters5.resx">
-      <DependentUpon>201702022000469_filters5.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201702132112025_sale-controller.resx">
-      <DependentUpon>201702132112025_sale-controller.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201702151759275_trim.resx">
-      <DependentUpon>201702151759275_trim.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201702191724132_advert_prop.resx">
-      <DependentUpon>201702191724132_advert_prop.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201702191755161_advert_markettype.resx">
-      <DependentUpon>201702191755161_advert_markettype.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201702191758404_advert_markettype1.resx">
-      <DependentUpon>201702191758404_advert_markettype1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201703161945191_feedback.resx">
-      <DependentUpon>201703161945191_feedback.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201704071938429_some7.resx">
+      <DependentUpon>201704071938429_some7.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
